--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -41,6 +41,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+
 
   /* 위에서 정의한 변수 적용 */
   background-color: var(--brand-primary);
